--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <title>React App</title>
   </head>
   <body>
+    <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.0.0/zappar-cv.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
